2021-10-29 Philipp Klaus Krause <pkk AT spth.de>

	* support/makebin/makebin.c:
	  Option for logo omission, patch #395 by bbbbbr.

2021-10-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix issues in cost handling for large functions.

2021-10-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def:
	  Peephole rule refactoring inspired by fix to a bug found by roybaer.

2021-10-14 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/stm8/_divulong.s,
	  device/lib/stm8/_modulong.s,
	  device/lib/stm8/Makefile.in,
	  src/stm8/peeph.def:
	  Revert some hand-written asm back to generic C, since SDCC now generates better code.

2021-10-13 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/btowc.c:
	  Fix btowc handling of int values that are valid characters when cast to unsigned char.

2021-10-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Improve wide left shift by literal.

2021-10-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Minor code cleanup.
	* device/lib/_strchr.c:
	  Fix strchr handling of c outside of char range.

2021-09-28 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/z80/__mulsint2slong.s:
	  Improve int x int -> long multiplication for z80.

2021-09-27 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/z80/__mulsint2slong.s:
	  Improve int x int -> long multiplication for z80.

2021-09-26 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/z80/__mulsint2slong.s,
	  src/z80/main.c,
	  device/lib/z80/Makefile.in:
	  int x int -> long multiplication support routine for z80.

2021-09-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/main.c,
	  src/z80/gen.c,
	  doc/sdccman.lyx,
	  device/lib/z80,
	  device/lib/z180,
	  device/lib/z80n,
	  device/lib/_memset.c,
	  support/regression/ports/*/spec.mk,
	  support/regression/tests/z80n-push-nn.c,
	  .version:
	  __sdcccall(1) convention as default for z80, z80n and z180 picked from breaktheworld branch.
